# pyskylumos

./: README.md  pyproject.toml  requirements.txt
src/pyskylumos/: __init__.py
src/pyskylumos/engine/: Engine.py  __init__.py
src/pyskylumos/examples/: demo_ecef.py  demo_frames.py
src/pyskylumos/frames/: __init__.py  frame_utils.py  generator.py
src/pyskylumos/sensor/: MicroPolarizer.py  OpticalConjugator.py  SensorChip.py  SlicingPattern.py  StokesCalculator.py  __init__.py
src/pyskylumos/sky_models/: Berry.py  Pan.py  Rayleigh.py  SkySimulator.py  __init__.py
tests/: test_micro_polarizer.py  test_optical_conjugator.py  test_stokes_calculator.py
