[build-system]
requires = ["hatchling >= 1.26", "build >= 1.2.2.post1", "twine >= 6.1.0"]
build-backend = "hatchling.build"

[project]
name = "pyskylumos"
version = "0.0.6"
authors = [
    {name="Teodor-Avram Ciochirca", email="sgtcioch@liverpool.ac.uk"},
    {name="Daniel John Chadwick", email="sgdjohnc@liverpool.ac.uk"},
    {name='Ian Sandall', email="isandall@liverpool.ac.uk"},
    {name="Jason Francis Ralph", email="jfralph@liverpool.ac.uk"}
]
maintainers = [
    {name="Teodor-Avram Ciochirca", email="sgtcioch@liverpool.ac.uk"},
    {name="Daniel John Chadwick", email="sgdjohnc@liverpool.ac.uk"},
]
description = "A Python package for simulating skylight polarization sensor recordings using advanced polarization models (including Pan, Berry, and Rayleigh). Designed for researchers and engineers, this tool enables the generation of synthetic datasets for biomimetic navigation, machine learning, computer vision, and atmospheric optics. Ideal for developing and testing bio-inspired sensors, building training data for AI models, and exploring applications in robotics, remote sensing, and environmental monitoring."
readme = "README.md"
requires-python = ">=3.12.2"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "astropy>=7.1.0",
    "numpy>=2.3.1",
	"matplotlib>=3.8"
]
keywords=[
    "simulation", "skylight polarization", "dataset", "machine learning", "biomimetics", "computer vision", "sensor",
    "athmospheric optics", "synthetic data", "robotics", "navigation", "remote sensing", "bio-inspired",
    "environmental sensing"
]

[project.urls]
Homepage = "https://github.com/taciochi/pyskylumos"
Issues = "https://github.com/taciochi/pyskylumos/issues"